# api/openapi/network-service.yaml
@@ -729,6 +729,16 @@ definitions:
         type: string
       artifact_tag:
         type: string
+      rollback_source_release_id:
+        type: string
+      rollback_target_artifact_digest:
+        type: string
+      rollback_target_artifact_ref:
+        type: string
+      rollback_target_artifact_repository:
+        type: string
+      rollback_target_artifact_tag:
+        type: string
       message:
         type: string
       progress:
